# darling-opendirectory

./: CMakeLists.txt  README.md
Core/: CFODContext.c  CFODContext.h  CFODNode.c  CFODNode.h  CFODQuery.c  CFODQuery.h  CFODRecord.c  CFODRecord.h  CFODSession.c  CFODSession.h  CFODTrigger.c  CFODTrigger.h  CFOpenDirectory.h  CFOpenDirectoryConstants.h  CFOpenDirectoryPriv.h  CMakeLists.txt  context_internal.h  errors.c  extauth.h  format.h  internal.h  odxpc.c  odxpc.h  rb.h  record_internal.h  transaction.h
Core/include/CFOpenDirectory/: CFOpenDirectory.h  CFOpenDirectoryConstants.h  record_internal.h
memberd-21.1/: CMakeLists.txt  MembershipResolver.h  UserGroup.c  c.h  memberd.plist
opendirectoryd/: CMakeLists.txt  com.apple.opendirectoryd.plist
opendirectoryd/include/: log.h
opendirectoryd/src/: main.c
